Fix windows own filesystem BS

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-E - Turtle/__pycache__/e_4_0_arco.cpython-36.pyc
 .vscode/.ropeproject/config.py
+livro_e_turtle/__pycache__/e_4_0_arco.cpython-36.pyc
+*/__pycache__/
+*/__pycache__
