--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.vscode/.ropeproject/config.py
+.vscode/.ropeproject/*
 livro_e_turtle/__pycache__/e_4_0_arco.cpython-36.pyc
 */__pycache__/
 */__pycache__
